@@ -30,6 +30,8 @@ class Application extends CI_Controller {
         $this->data['content'] = $this->parser->parse($this->data['pagebody'], $this->data, true);
         $this->data['data'] = &$this->data;
         $this->parser->parse('template', $this->data);
+        
+        $this->data['username'] = $this->session->userdata('username');
     }
 
 }
