@@ -1,7 +1,4 @@
 <div id="user">
-    <form action="/" method="post">
-        User Login
-        <input type="text" name="username">
-        <input type="submit" value="Enter">
-    </form>
+    Welcome, {username}!
+    This is a placeholder page.
 </div>
